# autonomic

./: Cargo.toml  README.MD
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: controller.rs  operation.rs
benches/: benchmarks.rs
controllers/: Cargo.toml
controllers/src/: controller.rs  errors.rs  lib.rs  manager.rs  tests.rs
controllers/src/testkit/: controller.rs  mod.rs
core/: Cargo.toml
core/benches/: benchmarks.rs
core/src/: container.rs  controller.rs  effector.rs  errors.rs  lib.rs  macros.rs  operation.rs  sensor.rs  service.rs  sync.rs  tests.rs  traits.rs
core/src/testkit/: operation.rs
events/: Cargo.toml
events/src/: lib.rs  record.rs  tracing.rs  traits.rs
events/src/layer/: file.rs  filter.rs  publisher.rs
operation/: Cargo.toml
operation/benches/: benchmarks.rs
operation/src/: container.rs  controller.rs  effector.rs  lib.rs  sensor.rs  serde.rs
operation/src/testkit/: conditions.rs  operation.rs  params.rs
operations/: Cargo.toml
operations/src/: conditions.rs  lib.rs  parameters.rs  shell.rs
serde/: Cargo.toml
serde/benches/: benchmarks.rs
serde/src/: dynamic.rs  lib.rs  tests.rs
serde/src/testkit/: schema.rs
service/: Cargo.toml
service/src/openapi/: client.rs  mod.rs  router.rs  server.rs
service/tls_test_keys/: key.pem
src/: lib.rs
src/core/: container.rs  controller.rs  effector.rs  mod.rs  operation.rs  sensor.rs  serde.rs  service.rs  sync.rs  tests.rs  tracing.rs  traits.rs
src/events/: mod.rs  record.rs  traits.rs
src/events/layer/: file.rs  filter.rs  mod.rs  publisher.rs
src/openapi/: client.rs  router.rs  server.rs
src/operations/: conditions.rs  parameters.rs  shell.rs
src/testkit/: conditions.rs  mod.rs  operation.rs  params.rs  tracing.rs
tls_test_keys/: cert.pem
