[workspace]
members = [
    "api",
    "operation",
    "service",
    "events",
]

resolver = "3"

[workspace.package]
name = "autonomic"
version = "0.1.0"
edition = "2024"
description = "General purpose infrastructure control plane"
license-file = "LICENSE"
readme = "README.MD"
repository = "https://github.com/geo-mak/autonomic"

[workspace.dependencies]
autonomic_operation = { path = "operation" }
autonomic_api = { path = "api" }

lazy_static = "1.5.0"

tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"]}
tokio-stream = { version = "0.1", features = ["sync"]}
futures-util = { version =  "0.3.30"}

serde = { version = "1.0.209", features = ["derive", "rc"]}
serde_json = "1.0.127"

tracing = { version = "0.1.40"}
tracing-core = { version = "0.1.32"}
tracing-subscriber = { version = "0.3.18"}

async-trait = { version = "0.1.82" }
chrono = { version = "0.4.38", features = ["serde"] }
