[package]
name = "autonomic_controllers"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
autonomic_events = { workspace = true, features = ["testkit"]}

[dependencies]
autonomic_events.workspace = true
autonomic_serde = { workspace = true }

lazy_static.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }

[features]
testkit = []