[package]
name = "autonomic_core"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["tests"]

[features]
tests = ["tracing-subscriber/env-filter"]

[dev-dependencies]
criterion = "0.6.0"

[dependencies]
lazy_static.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true