[package]
name = "autonomic_events"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
csv = "1.3.1"
serde_json.workspace = true

[dependencies]
autonomic_core.workspace = true

tokio = { workspace = true , features = ["fs", "io-util"] }
chrono.workspace = true
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true

[features]
testkit = ["tracing-subscriber/env-filter"]