[package]
name = "autonomic_operations"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tokio = { workspace = true, features = ["fs"] }

[dependencies]
autonomic_core = { workspace = true , features = ["tests"] }

async-trait.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["process"] }
serde.workspace = true
tracing.workspace = true